<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <LinearLayout style="@style/verticalLinearLayout">

            <ImageView
                android:id="@+id/park_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/shanidar_park" />

            <LinearLayout
                style="@style/verticalLinearLayout"
                android:padding="4dp">

                <TextView
                    android:id="@+id/park_name"
                    style="@style/textStyle"
                    android:text="@string/shanadar_park_name"
                    android:textColor="@color/colorSecondary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/park_address"
                    style="@style/textStyle"
                    android:text="@string/shanadar_park_address" />

                <TextView
                    android:id="@+id/park_open_close_time"
                    style="@style/textStyle"
                    android:text="@string/shanadar_park_open_close_time" />

                <TextView
                    android:id="@+id/park_overview"
                    style="@style/textStyle"
                    android:text="@string/shanadar_park_detail" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>