<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <LinearLayout
            style="@style/verticalLinearLayout">

            <ImageView
                android:id="@+id/restaurant_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/samad_resturant"
                android:scaleType="centerCrop"/>

            <LinearLayout
                style="@style/verticalLinearLayout"
                android:padding="4dp">

                <TextView
                    android:id="@+id/restaurant_name"
                    style="@style/textStyle"
                    android:text="@string/sammad_name"
                    android:textColor="@color/colorSecondary"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/restaurant_address"
                    style="@style/textStyle"
                    android:text="@string/sammad_address"/>

                <TextView
                    android:id="@+id/restaurant_open_close_time"
                    style="@style/textStyle"
                    android:text="@string/sammad_open_close_time"/>

                <TextView
                    android:id="@+id/restaurant_phone"
                    style="@style/textStyle"
                    android:text="@string/sammad_phone"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>