<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/verticalLinearLayout"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <LinearLayout style="@style/verticalLinearLayout">

            <ImageView
                android:id="@+id/hotel_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/copthorne_hotel" />

            <LinearLayout
                style="@style/verticalLinearLayout"
                android:padding="4dp">

                <TextView
                    android:id="@+id/hotel_name"
                    style="@style/textStyle"
                    android:text="@string/copthorne_baranan_name"
                    android:textColor="@color/colorSecondary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/hotel_address"
                    style="@style/textStyle"
                    android:text="@string/copthorne_baranan_address" />

                <TextView
                    android:id="@+id/hotel_phone"
                    style="@style/textStyle"
                    android:text="@string/copthorne_baranan_phone" />

                <TextView
                    style="@style/textStyle"
                    android:text="@string/hotel_details" />

                <LinearLayout style="@style/verticalLinearLayout">

                    <LinearLayout style="@style/horizontalLinearLayout">

                        <LinearLayout style="@style/iconLinearLayoutStyle">

                            <ImageView
                                style="@style/iconHotelStyle"
                                android:src="@drawable/laundry_service" />

                            <TextView
                                style="@style/textStyle"
                                android:text="Laundry service" />

                        </LinearLayout>

                        <LinearLayout style="@style/iconLinearLayoutStyle">

                            <ImageView
                                style="@style/iconHotelStyle"
                                android:src="@drawable/room_service" />

                            <TextView
                                style="@style/textStyle"
                                android:text="Room service" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout style="@style/horizontalLinearLayout">

                        <LinearLayout style="@style/iconLinearLayoutStyle">

                            <ImageView
                                style="@style/iconHotelStyle"
                                android:src="@drawable/baby_carriage" />

                            <TextView
                                style="@style/textStyle"
                                android:text="Kid-friendly" />

                        </LinearLayout>

                        <LinearLayout style="@style/iconLinearLayoutStyle">

                            <ImageView
                                style="@style/iconHotelStyle"
                                android:src="@drawable/restaurant" />

                            <TextView
                                style="@style/textStyle"
                                android:text="Restaurant" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>